--- a/css/style.css
+++ b/css/style.css
@@ -72,3 +72,48 @@ td {
     border-bottom: 1px solid #e5e5e5;
     border-right: 1px solid #ffcc00;
 }
+
+nav {
+    width: 150px;
+    position: relative;
+    top: 0px;
+    left: 60%;
+    margin-left: -650px;
+    text-align: right;
+}
+
+section {
+    top: -175px;
+    left: 20%;
+    width: 590px;
+    padding: 30px 30px 50px 30px;
+    margin: 20px 0;
+    position: relative;
+    background: #fbfbfb;
+    border-radius: 3px;
+    border: 1px solid #cbcbcb;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.09), inset 0px 0px 2px 2px rgba(255, 255, 255, 0.5), inset 0 0 5px 5px rgba(255, 255, 255, 0.4);
+}
+
+.subsection {
+    border: 0;
+    outline: none;
+    background: transparent url("../images/hr.gif") bottom center repeat-x;
+    padding-bottom: 20px;
+}
+
+.wrapper {
+    width: 650px;
+    margin: 0 auto;
+    position: relative;
+}
+
+footer {
+    width: 180px;
+    position: fixed;
+    left: 50%;
+    margin-left: -530px;
+    bottom: 20px;
+    text-align: right;
+    line-height: 16px;
+}
