--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,40 @@ body {
 
 #banner {
     background-color: #ffcc00;
-    border-left-width: 30px;
-    margin-left: 70px;
+    min-width: 500px;
+    height: 50px;
     margin-right: 70px;
-    padding-top: 0px;
-    padding-bottom: 30px;
-    margin-top: -45px;
-    border-radius: 4px 4px 4px 4px;
+    border-radius: 0px 50px 50px 0px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
+    position: relative;
+    top: -40px;
+}
+
+a.button{
+    position: fixed;
+    left: 50%;
+    margin-left: -197px;
+    padding: 10px 12px;
+    margin-top: -33px;
+    line-height: 14px;
+    background-color: #FFE788;
+    border: 1px solid #dba500;
+    border-radius: 30px;
+    box-shadow: inset 27px 14px 44px rgba(255, 255, 255, 0.4), 0px 1px 1px rgba(0, 0, 0, 0.1);
+    font-weight: bold;
+    display: inline-block;
+    text-align: center;
+}
+
+#banner #logo {
+    position: absolute;
+    height: 36px;
+    width: 36px;
+    right: 11px;
+    top: 7px;
+    display: block;
+    background: url(../images/puzzle-mini-logo.png);
+<!-- COMMENTO -->
 }
 
 h1 { background-color: #227ac7;
@@ -28,6 +55,7 @@ h1 { background-color: #227ac7;
     border-top-width: 50px;
     margin-top: 0px;
     padding: 50px;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.9);
 
 }
 
@@ -74,16 +102,16 @@ td {
 }
 
 nav {
-    width: 150px;
+    width: 200px;
     position: relative;
     top: 0px;
     left: 60%;
-    margin-left: -650px;
+    margin-left: -615px;
     text-align: right;
 }
 
 section {
-    top: -175px;
+    top: -200px;
     left: 20%;
     width: 590px;
     padding: 30px 30px 50px 30px;
@@ -103,6 +131,7 @@ section {
 }
 
 .wrapper {
+    top: -25px;
     width: 650px;
     margin: 0 auto;
     position: relative;
@@ -117,3 +146,4 @@ footer {
     text-align: right;
     line-height: 16px;
 }
+
