--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
-    font: 14px/22px 'Quattrocento Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font: 14px/22px Helvetica, Arial, sans-serif;
     color: #666;
-    background: #eae6d1;
+    background: #D5BF86;
     width:100%;
     margin-top: 0px;
     margin-left: 0px;
@@ -10,29 +10,22 @@ body {
 }
 
 #banner {
-    background-color: #ffcc00;
+    background-color: #D88837;
     min-width: 500px;
     height: 50px;
     margin-right: 70px;
     border-radius: 0px 50px 50px 0px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
     position: relative;
-    top: -40px;
+    top: -55px;
 }
 
 a.button{
-    position: fixed;
-    left: 50%;
-    margin-left: -197px;
-    padding: 10px 12px;
-    margin-top: -33px;
-    line-height: 14px;
-    background-color: #FFE788;
-    border: 1px solid #dba500;
-    border-radius: 30px;
-    box-shadow: inset 27px 14px 44px rgba(255, 255, 255, 0.4), 0px 1px 1px rgba(0, 0, 0, 0.1);
-    font-weight: bold;
-    display: inline-block;
+    position: absolute;
+    right: 54px;
+    top: 28px;
+    font-size: 9px;
+    line-height: 10px;
     text-align: center;
 }
 
@@ -47,31 +40,23 @@ a.button{
 <!-- COMMENTO -->
 }
 
-h1 { background-color: #227ac7;
-    color: white;
+h1 {
+    background-color: #461220;
+    color: rgba(247, 209, 160, 0.99);
     text-align: center;
-    font-size: 28px;
-    padding-top: 50px;
-    border-top-width: 50px;
+    font-size: 45px;
     margin-top: 0px;
-    padding: 50px;
-    text-shadow: 2px 2px rgba(0, 0, 0, 0.9);
-
+    padding: 65px;
+    text-shadow: 2px 2px rgba(255, 204, 23, 0.3);
 }
 
 ul{
-    margin-left: 50px;
     text-align: right;
-    width: 250px;
+    width: 175px;
+    position: relative;
 }
 
-section{
-    background-color: white;
-    height: auto;
-    border-left-width: 80px;
-    margin-left: 370px;
-    margin-right: 70px;
-}
+
 
 h2 {
     font-size: 24px;
@@ -102,22 +87,24 @@ td {
 }
 
 nav {
-    width: 200px;
+    width: 23%;
+    float: left;
     position: relative;
-    top: 0px;
-    left: 60%;
-    margin-left: -615px;
+    top: -24px;
     text-align: right;
 }
 
+
+
 section {
-    top: -200px;
-    left: 20%;
-    width: 590px;
-    padding: 30px 30px 50px 30px;
-    margin: 20px 0;
+    width: 75%;
+    float: right;
+    top: -212px;
+    left: 140px;
+    min-width: 600px;
+    padding: 0px 30px 50px 30px;
     position: relative;
-    background: #fbfbfb;
+    background: #F1F1F1;
     border-radius: 3px;
     border: 1px solid #cbcbcb;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.09), inset 0px 0px 2px 2px rgba(255, 255, 255, 0.5), inset 0 0 5px 5px rgba(255, 255, 255, 0.4);
@@ -131,9 +118,8 @@ section {
 }
 
 .wrapper {
-    top: -25px;
-    width: 650px;
-    margin: 0 auto;
+    width: 85%;
+    top: -20px;
     position: relative;
 }
 
