aggiunta HR2.gif

--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ section {
 .subsection {
     border: 0;
     outline: none;
-    background: transparent url("../images/hr.gif") bottom center repeat-x;
+    background: transparent url("../images/hr2.gif") bottom center repeat-x;
     padding-bottom: 20px;
 }
 
