--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
     background: rgb(255, 245, 218);
     width:100%;
     display: block;
-    margin: 0;
+
 }
 
 a {
@@ -132,7 +132,6 @@ li {
 
 .nav ul{
     list-style: none;
-    list-style-image: none;
     font-size: 14px;
 }
 
@@ -158,13 +157,13 @@ section {
     margin-left: 200px;
     margin-right: 95px;
     margin-top: 15px;
-    padding: 0px 30px 50px 30px;
+    padding: 0 30px 50px 30px;
     position: relative;
     background: #F1F1F1;
     border-radius: 3px;
     border: 1px solid #cbcbcb;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.09),
-    inset 0px 0px 2px 2px rgba(255, 255, 255, 0.5),
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.09),
+    inset 0 0 2px 2px rgba(255, 255, 255, 0.5),
     inset 0 0 5px 5px rgba(255, 255, 255, 0.4);
 }
 
@@ -213,7 +212,7 @@ footer {
 
         width: 100%;
         height: 50px;
-        min-width: 0px;
+        min-width: 0;
         border-radius: 0;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
         position: fixed;
