--- a/styles/custom.css
+++ b/styles/custom.css
@@ -9,13 +9,17 @@ body {
 
 h1,
 h2,
-h3,
 h4,
 h5,
 h6 {
     text-transform: uppercase;
     font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
+    letter-spacing: 1px;
+}
+h3{
+    font-weight: 400;
+    font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
     letter-spacing: 1px;
 }
 
@@ -65,7 +69,7 @@ hr {
 /*titoli di ogni pagina */
 .intro-text {
     text-transform: uppercase;
-    font-size: 1.25em;
+    font-size: 1.50em;
     font-weight: 400;
     letter-spacing: 1px;
 }
@@ -75,7 +79,7 @@ hr {
 .img-border {
     float: none;
     margin: 0 auto 0;
-    border: #b92a35 solid 2px;
+
 }
 
 .img-left {
@@ -86,18 +90,6 @@ hr {
 
 
 @media screen and (min-width:768px) {
-    .brand {
-        display: inherit;
-        margin: 0;
-        padding: 30px 0 10px;
-        text-align: center;
-        text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-        font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 5em;
-        font-weight: 700;
-        line-height: normal;
-        color: #fff;
-    }
 
     .top-divider {
         margin-top: 0;
