--- a/styles/custom.css
+++ b/styles/custom.css
@@ -16,11 +16,14 @@ h6 {
     font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
+
 }
 h3{
     font-weight: 400;
     font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
     letter-spacing: 1px;
+    font-size: 18px;
+    padding-left: 5px;
 }
 
 p {
