--- a/styles/custom.css
+++ b/styles/custom.css
@@ -99,6 +99,55 @@ hr {
 
 
 
+/*--------------------------PERSONAS--------------------------- */
+
+
+#personas .personas-item {
+    margin: 0 0 15px;
+    right: 0;
+}
+#personas .personas-item .personas-link {
+    display: block;
+    position: relative;
+    max-width: 400px;
+    margin: 0 auto;
+}
+#personas .personas-item .personas-link .caption {
+    background: rgba(24, 188, 156, 0.9);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: all ease 0.5s;
+    -webkit-transition: all ease 0.5s;
+    -moz-transition: all ease 0.5s;
+}
+#personas .personas-item .personas-link .caption:hover {
+    opacity: 1;
+}
+#personas .personas-item .personas-link .caption .caption-content {
+    position: absolute;
+    width: 100%;
+    height: 20px;
+    text-align: center;
+    top: 50%;
+    margin-top: -12px;
+}
+#personas .personas-item .personas-link .caption .caption-content i {
+    margin-top: -12px;
+}
+#personas .personas-item .personas-link .caption .caption-content h3,
+#personas .personas-item .personas-link .caption .caption-content h4 {
+    margin: 0;
+}
+#personas * {
+    z-index: 2;
+}
+
+/*----------------------------------------- FINE PERSONAS---------------------------------------------- */
+
+
+
 @media screen and (min-width:768px) {
 
     .top-divider {
