--- a/styles/custom.css
+++ b/styles/custom.css
@@ -26,13 +26,6 @@ h3{
 
 }
 
-.genitori-insegnanti{
-    font-weight: 400;
-    font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
-    letter-spacing: 1px;
-    font-size: 18px;
-    padding-left: 5px;
-}
 p {
     font-size: 1.25em;
     line-height: 1.6;
@@ -45,37 +38,11 @@ hr {
 }
 
 
-/*fuoir diario*/
+/*fuori diario*/
 .pay-off {
     display: none;
 
 }
-
-
-/*navbar*/
-.navbar-nav {
-    text-transform: uppercase;
-    font-weight: 400;
-    letter-spacing: 3px;
-}
-
-
-.tagline-divider {
-    margin: 15px auto 3px;
-    max-width: 250px;
-    border-color: #999999;
-}
-
-.box {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 50px;
-    background: #fff;
-    background: rgba(255,255,255,0.9);
-}
-
-
-
 /*titoli di ogni pagina */
 .intro-text {
     text-transform: uppercase;
@@ -99,129 +66,39 @@ hr {
 
 
 
-/*--------------------------PERSONAS--------------------------- */
-
-
-#personas .personas-item {
-    margin: 0 0 15px;
-    right: 0;
-}
-#personas .personas-item .personas-link {
-    display: block;
-    position: relative;
-    max-width: 400px;
-    margin: 0 auto;
-}
-#personas .personas-item .personas-link .caption {
-    background: rgba(24, 188, 156, 0.9);
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: all ease 0.5s;
-    -webkit-transition: all ease 0.5s;
-    -moz-transition: all ease 0.5s;
-}
-#personas .personas-item .personas-link .caption:hover {
-    opacity: 1;
-}
-#personas .personas-item .personas-link .caption .caption-content {
-    position: absolute;
-    width: 100%;
-    height: 20px;
-    text-align: center;
-    top: 50%;
-    margin-top: -12px;
-}
-#personas .personas-item .personas-link .caption .caption-content i {
-    margin-top: -12px;
-}
-#personas .personas-item .personas-link .caption .caption-content h3,
-#personas .personas-item .personas-link .caption .caption-content h4 {
-    margin: 0;
-}
-#personas * {
-    z-index: 2;
+/*---------------------------------navbar--------------------------------*/
+.navbar-nav {
+    text-transform: uppercase;
+    font-weight: 400;
+    letter-spacing: 3px;
 }
 
-/*----------------------------------------- FINE PERSONAS---------------------------------------------- */
 
-
-
-@media screen and (min-width:768px) {
-
-    .top-divider {
-        margin-top: 0;
-    }
-
-    .img-left {
-        float: left;
-        margin-right: 25px;
-    }
-
-    .pay-off {
-        display: inherit;
-        margin: 0;
-        padding: 0 0 40px;
-        text-align: center;
-        text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-        font-size: 1.25em;
-        font-weight: 400;
-        letter-spacing: 3px;
-        color: black;
-    }
-
-    .navbar {
-        border-radius: 0;
-    }
-
-    .navbar-header {
-        display: none;
-    }
-
-    .navbar {
-        min-height: 0;
-    }
-
-    .navbar-default {
-        border: none;
-        background: #fff;
-        background: rgba(255,255,255,0.9);
-    }
-
-    .nav>li>a {
-        padding: 35px;
-    }
-
-    .navbar-nav>li>a {
-        line-height: normal;
-    }
-
-    .navbar-nav {
-        display: table;
-        float: none;
-        margin: 0 auto;
-        table-layout: fixed;
-        font-size: 1.25em;
-    }
+.tagline-divider {
+    margin: 15px auto 3px;
+    max-width: 250px;
+    border-color: #999999;
 }
 
-@media screen and (min-width:1200px) {
-    .box:after {
-        content: '';
-        display: table;
-        clear: both;
-    }
-    #img_puzzle {
-        padding-top: 5px;
-        padding-bottom: 20px;
-    }
-
-
-    #videoIntro{
-        padding-top: 50px;
-    }
+.box {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 50px;
+    background: #fff;
+    background: rgba(255,255,255,0.9);
 }
+
+
+
+/*-------------------------- HOME -------------------------- */
+#videoIntro{
+    padding-top: 50px;
+}
+
+
+
+
+/*--------------------------CONCEPT--------------------------- */
 
 
 
@@ -232,3 +109,37 @@ hr {
 #contenuti {
     padding-top: 150px;
 }
+#img_puzzle {
+    padding-top: 5px;
+    padding-bottom: 20px;
+}
+
+
+
+
+
+
+
+/*--------------------------PERSONAS--------------------------- */
+
+
+
+
+
+
+
+
+
+
+
+/*----------------------------------------- FUNZIONALITA'---------------------------------------------- */
+.genitori-insegnanti{
+    font-weight: 400;
+    font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+    letter-spacing: 1px;
+    font-size: 18px;
+    padding-left: 5px;
+}
+
+
+
