concept: modifiche css

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -7,6 +7,15 @@ body {
     -o-background-size: cover;
 }
 
+.box {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 50px;
+    background: #fff;
+    background: rgba(255,255,255,0.9);
+}
+
+
 h1,
 h2,
 h4,
@@ -26,13 +35,7 @@ h3{
 
 }
 
-.genitori-insegnanti{
-    font-weight: 400;
-    font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
-    letter-spacing: 1px;
-    font-size: 18px;
-    padding-left: 5px;
-}
+
 p {
     font-size: 1.25em;
     line-height: 1.6;
@@ -60,20 +63,6 @@ hr {
 }
 
 
-.tagline-divider {
-    margin: 15px auto 3px;
-    max-width: 250px;
-    border-color: #999999;
-}
-
-.box {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 50px;
-    background: #fff;
-    background: rgba(255,255,255,0.9);
-}
-
 
 
 /*titoli di ogni pagina */
@@ -100,6 +89,39 @@ hr {
 
 
 
+/*concept*/
+
+
+#socloo{
+    padding-top: 80px;
+}
+
+#contenuti {
+    padding-top: 150px;
+}
+
+
+/*modal*/
+.modal-content{
+    margin-top: 150px;
+    margin-left: 150px;
+    margin-right: 150px;
+}
+
+.modal-content .btn-default {
+   margin-bottom: 10px;
+}
+
+/*fine concept*/
+
+/*funzionalità*/
+.genitori-insegnanti{
+    font-weight: 400;
+    font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+    letter-spacing: 1px;
+    font-size: 18px;
+    padding-left: 5px;
+}
 
 /*----------------------------------------- FINE PERSONAS---------------------------------------------- */
 
@@ -182,17 +204,3 @@ hr {
 
 
 
-#socloo{
-    padding-top: 80px;
-}
-
-#contenuti {
-    padding-top: 150px;
-}
-
-
-.modal-content{
-    margin-top: 150px;
-    margin-left: 150px;
-    margin-right: 150px;
-}
