--- a/styles/custom.css
+++ b/styles/custom.css
@@ -98,9 +98,9 @@ ul{
 
 /*modal*/
 .modal-content{
-    margin-top: 150px;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-top: 50px;
+    margin-left: 200px;
+    margin-right: 200px;
 }
 
 .modal-content .btn-default {
@@ -133,6 +133,13 @@ ul{
     padding-left: 5px;
 }
 
+.genitori-insegnanti h3{
+    color: #308E89;
+}
+
+#piuInfo {
+    text-align: center;
+}
 /*----------------------------------------- FINE PERSONAS---------------------------------------------- */
 
 
