Inserimento valutazioni parte 1

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -140,7 +140,11 @@ ul{
 #piuInfo {
     text-align: center;
 }
-/*----------------------------------------- FINE PERSONAS---------------------------------------------- */
+
+#valut h5{
+    color: #308E89;;
+}
+/*--------------------------------------------------------------------------------------- */
 
 
 
